--- a/subtrees.conf
+++ b/subtrees.conf
@@ -1,10 +1,10 @@
 [subtree "src"]
-prefix = modules
+prefix = modules/src
 repo = git@github.com:AtlantisOS-Project/atlantis-UI-base.git
 branch = main
 
 [subtree "deb"]
-prefix = deb
+prefix = modules/deb
 repo = git@github.com:AtlantisOS-Project/atlantis-UI-base.git
 branch = main
 
