--- a/subtrees.conf
+++ b/subtrees.conf
@@ -1,10 +1,10 @@
 [subtree "src"]
-prefix = modules
-repo = git@github.com:AtlantisOS-Project/atlantis-UI-base.git
-branch = main
+prefix = src
+repo   = ./tmp-upstream
+branch = src-only
 
 [subtree "deb"]
 prefix = deb
-repo = git@github.com:AtlantisOS-Project/atlantis-UI-base.git
-branch = main
+repo   = ./tmp-upstream
+branch = deb-only
 
