set local configs

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,6 @@
+#
+# first run:
+# git config merge.ours.driver true
 # --------------------------------------
 # Always keep local configuration files
 # subtree:
